--- a/index.html
+++ b/index.html
@@ -97,22 +97,30 @@
                             <label class="col-md-2 col-sm-6 col-form-label" for="ntables"><strong>Number of
                                     Guests</strong></label>
                             <div class="col-form-control col-12 col-md-9 col-sm-12 align-self-center ">
-                                <input class=" col-form-control col-md-1" type="radio" name="ntables" value="1">1</input>
-                                <input class=" col-form-control col-md-1" type="radio" name="ntables" value="2">2</input>
-                                <input class=" col-form-control col-md-1" type="radio" name="ntables" value="3">3</input>
-                                <input class=" col-form-control col-md-1" type="radio" name="ntables" value="4">4</input>
-                                <input class=" col-form-control col-md-1 " type="radio" name="ntables" value="5">5</input>
-                                <input class=" col-form-control col-md-1 " type="radio" name="ntables" value="6">6</input>
+                                <input class=" col-form-control col-md-1" type="radio" name="ntables"
+                                    value="1">1</input>
+                                <input class=" col-form-control col-md-1" type="radio" name="ntables"
+                                    value="2">2</input>
+                                <input class=" col-form-control col-md-1" type="radio" name="ntables"
+                                    value="3">3</input>
+                                <input class=" col-form-control col-md-1" type="radio" name="ntables"
+                                    value="4">4</input>
+                                <input class=" col-form-control col-md-1 " type="radio" name="ntables"
+                                    value="5">5</input>
+                                <input class=" col-form-control col-md-1 " type="radio" name="ntables"
+                                    value="6">6</input>
                             </div>
-    
+
                         </div>
                         <div class="form-group row">
-                            <label for="section" class="col-md-2 col-sm-6 col-form-label"><strong>Section</strong></label>
+                            <label for="section"
+                                class="col-md-2 col-sm-6 col-form-label"><strong>Section</strong></label>
                             <div class="col-12 col-md-4 col-sm-6">
-                                <button type="button" style="background: green;"  class="col-md-6 col-sm-6 form-control btn " 
-                                id="section" name="section">No smoking</button>
-                                <button type="button" class="col-md-4 col-sm-6 form-control btn btn-danger" 
-                                id="section" name="section">Smoking</button>
+                                <button type="button" style="background: green;"
+                                    class="col-md-6 col-sm-6 form-control btn " id="section" name="section">No
+                                    smoking</button>
+                                <button type="button" class="col-md-4 col-sm-6 form-control btn btn-danger" id="section"
+                                    name="section">Smoking</button>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -147,7 +155,8 @@
                 <div class="btn bg-warning btn-block align-self-center" data-toggle="tooltip" data-html="true"
                     title="Or call us at </br> +5599984592679" data-placement="bottom"
                     style="height: 40px; width: 200px;">
-                    <a data-toggle="modal" data-target="#tablemodal" style="text-decoration: none" id="btn-reserve">Reserve Table</a>
+                    <a data-toggle="modal" data-target="#tablemodal" style="text-decoration: none"
+                        id="btn-reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -193,20 +202,15 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
-                        <div class="btn-group" id="carouselButton">
-                            <button class="btn btn-danger btn-sm" id="carousel-pause">
-                                <span class="fa fa-pause"></span>
-                            </button>
-                                <button class="btn btn-danger btn-sm" id="carousel-play">
-                                    <span class="fa fa-play"></span>
-                                </button>
-                        </div>
                     </div>
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span id="carousel-button-icon" class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="row row-content align-items-center">
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
             <h3>Meet our Culinary Specialists</h3>
@@ -273,17 +277,30 @@
         </div>
     </footer>
     <!-- order is this: 1-jquery 2-popper.js 3-bootstrap.js -->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
     <script>
-        $(document).ready(function() {
-            $('#mycarousel').carousel({interval:2000});
-            $('#carousel-pause').click(function() {
-                $('#mycarousel').carousel('pause');
-            });
-            $('#carousel-play').click(function() {
-                $('#mycarousel').carousel('cycle');
+        $(document).ready(function () {
+            $('#mycarousel').carousel({ interval: 2000 });
+            $("#carouselButton").click(function () {
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                }
+                else if ($("#carouselButton").children("span").hasClass('fa-play')) {
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');
+                }
             });
         });
     </script>
